Kiwix 0.8 rc1
* High reducing of the xapian index disk usage
* Improvement of the history management
* Ignore now, by indexing, HTML pages with the NOINDEX meta tag
* French/Spanish translation of the software help
* Fixed language switch menu (ID: 2822178)

Kiwix 0.8 beta5
* Small improvements of the Spanish translations&shortcuts
* Bug fix by the indexing process observer (ID: 2811642)
* Add a gray version of the buttons
* First version of a software help
* Add a cache strategy

Kiwix 0.8 beta4
* Random page feature (ID: 2799134)
* Fix an issue concerning URLs with local anchors (ID: 2798769)
* Localisation of Xulrunner builtins (ID: 2799815)

Kiwix 0.8 beta3
* Rewrite the buggy MD5 code
* Improvement of the GUI Spanish translation
* Remember the window geometry (ID: 1671235)
* Use xapian-core-1.0.13

Kiwix 0.8 beta2
* GUI in Italian (ID: 2799146)
* 32 bits support for large ZIM file (ID: 2801839)