@@ -8,12 +8,14 @@ locale main en-US locale/en-US/main/
 locale main es-ES locale/es-ES/main/
 locale main fr-FR locale/fr-FR/main/
 locale main it-IT locale/it-IT/main/
+locale main ar    locale/ar/main/
 
 locale branding en-US locale/branding/
 locale branding fr-FR locale/branding/
 locale branding de-de locale/branding/
 locale branding es-ES locale/branding/
 locale branding it-IT locale/branding/
+locale branding ar    locale/branding/
 
 #skin packagename skinname uri/to/files/ [flags]
 skin main default skin/default/
