@@ -11,10 +11,11 @@
 	id        = "main"
 	onload    = "init();"
 	onunload  = "saveWindowGeometry(this.outerWidth, this.outerHeight, this.screenX, this.screenY);"
-    title = "&main.title;"
+	title = "&main.title;"
 	titlemodifier = "&main.title;"
 	titlemenuseparator = " - "
-    contenttitlesetting = "true"
+	contenttitlesetting = "true"
+	style = "direction: &main.cssdirection;"
 	>
 
 <!-- Properties -->
@@ -49,7 +50,7 @@
 </keyset>
 
 <!-- Menu bar -->
-<menubar id="menu-bar">
+<menubar id="menu-bar"> 
   <menu id="menu-file" label="&main.file;" accesskey="&main.file.accesskey;">
     <menupopup id="file-popup">
       <menuitem id="file-open" label="&main.openFile;" key="open-file-key" class="menuitem-iconic"
