@@ -1,0 +1,61 @@
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>أهلاً</title>
+
+    <style type="text/css">
+      .title {
+      background-color: #DDDDDD;
+      padding: 0.5em;
+      text-color: green;
+      -moz-border-radius: 5px;
+      margin: 0.5em 0 0.5em 0;
+      font-weight: bold;
+      }
+
+      .chapter {
+      text-indent: 2em;
+      }
+
+      body {
+      background-color: #FFFFF;
+      margin: 0 0.5em 0 0.5em;
+      font: x-normal sans-serif;
+      color: black;
+      }
+      
+    </style>
+
+  </head>
+<body dir="rtl">
+
+<div class="title">أهلاً</div>
+<div class="chapter">
+أهلاً إلى برنامج كيويكس. كيويكس <a href="http://en.wikipedia.org/wiki/Free_software">برنامج حر<a> قادر على قراءة <a href="http://www.openzim.org">ملفات ZIM</a>. ملفات ZIM عبارة عن ملفات تدمج محتوى الوسائط المتعددة (نص، صورة، فيديو)  التي تأتي بشكل أساسي من <a href="http://en.wikipedia.org/wiki/World_Wide_Web">الشبكة العنكبوتية العالمية</a>، مثل <a href="http://en.wikipedia.org/wiki/Blog">المدونات</a> أو <a href="http://en.wikipedia.org/wiki/Wiki">مواقع الويكي</a>. كيويكس إذاً حل يسمح لك بتصفح المحتوى من دون إتصال بالشبكة، المحتوى الذي لايمكن الوصول إليه عادةً إلا بوجود إتصال. تم تطوير كيويكس بشكل خاص لتأمين الوصول إلى محتوى موسوعة <a href="http://en.wikipedia.org/wiki/Wikipedia">ويكيبيديا</a> الحرة للناس الذين ليس لديهم وصول إلى   <a href="http://en.wikipedia.org/wiki/Internet">الإنترنت</a>. بكل الأحوال فإن كيويكس برنامج تحت التطوير، بالإمكان إستخدامه.
+</div>
+
+<div class="title">ملفات ZIM</div>
+<div class="chapter">
+في الوقت الحالي، ليس هناك نسخ رسمية من ملفات ZIM، لكننا نعمل على بعض منها، بإمكانك تحميل الملفات قيد التطوير  <a href="http://tmp.kiwix.org/zim/">هنا</a> بإستخدام المتصفح لديك وفتحها من خلال القائمة "ملف > فتح ملف..."
+</div>
+
+<div class="title" style="text-indent: 0px;">مساعدة</div>
+<ul>
+  <li><a href="https://sourceforge.net/tracker/?group_id=175508&atid=873515">التبليغ عن خطأ في البرنامج</a></li>
+  <li><a href="https://sourceforge.net/tracker/?group_id=175508&atid=873518">طلب ميزة جديدة في البرنامج</a></li>
+  <li><a href="http://www.kiwix.org/index.php/FAQ">الأسئلة الأكثر شيوعاً</a></li>
+  <li><a href="mailto:kelson@kiwix.org">غير ذلك</a></li>
+</ul>
+<div class="chapter">
+</div>
+
+<div class="title">المزيد...</div>
+<div class="chapter" style="text-indent: 0px;">
+<ul>
+  <li><a href="http://www.kiwix.org/">موقع مشروع كيويكس الرسمي</li>
+  <li><a href="http://www.openzim.org/">موقع مشروع بنية ملفات ZIM الرسمي</li>
+</ul>
+</div>
+
+</body>
+</html>
