@@ -1,0 +1,13 @@
+loadZimFileError=غير قادر على فتح الملف '%1'، هل أنت متأكد أن هذا ملف ZIM صالح؟
+alreadyIndexingError=هناك عملية فهرسة جارية بالأصل.
+emptySearchStringError=عليك أن تدخل نصاً للبحث عنه.
+noResultsError=لا نتائج لهذا البحث.
+noActiveZimFile=ليس هناك ملف ZIM مفتوح, قم بفتح واحد أولاً.
+indexZimFileConfirm=هل تريد فهرسة ملف ZIM هذا الآن؟
+abortIndexingConfirm=هناك عملية فهرسة تجري الآن، هل أنت متأكد أنك تريد الخروج وإلغاء العملية الآن؟
+restartConfirm=%1 بحاجة إلى إعادة التشغيل، هل تريد القيام بذلك الآن؟
+endOfIndexing=تم الإنتهاء من عملية الفهرسة.
+confirm=تأكيد
+error=خطأ
+information=معلومات
+indexing=الفهرسة
