@@ -2,8 +2,9 @@ Kiwix 0.8 rc1
 * High reducing of the xapian index disk usage
 * Improvement of the history management
 * Ignore now, by indexing, HTML pages with the NOINDEX meta tag
-* French/Spanish translation of the software help
+* French/Spanish/German translation of the software help
 * Fixed language switch menu (ID: 2822178)
+* Arabic localization
 
 Kiwix 0.8 beta5
 * Small improvements of the Spanish translations&shortcuts
